<resources>
    <string name="app_name">TraceWiz</string>
    <string name="prompt_email">Email/Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="lbl_login">Login to continue</string>
    <string name="lbl_alert_message">Alert Message</string>
    <string name="lbl_error_message">Error Message</string>
    <string name="lbl_confirmation">Confirmation</string>
    <string name="msg_no_internet">Please Check Your Internet Connection</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="msg_login_failed">Login Failed</string>
    <string name="msg_login_success">Login Successful</string>
    <string name="msg_check_server_connection">Check Server Connection..</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="lbl_welcome">Welcome To TraceWiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_raw">Raw</string>
    <string name="lbl_packaging">Packaging</string>
    <string name="lbl_material_type">Material Type</string>
    <string name="lbl_qty">Qty</string>
    <string name="lbl_unit">Unit</string>
    <string name="lbl_supplier_name">Supplier Name</string>
    <string name="lbl_driver_name">Driver Name</string>
    <string name="lbl_mobile_number">Mobile_Number</string>
    <string name="lbl_truck_no">Truck No</string>
    <string name="lbl_licence_no">License No</string>
    <string name="lbl_invoice_no">Invoice Number</string>
    <string name="lbl_invoice">Invoice</string>
    <string name="lbl_coa">Certificate of Analysis</string>
    <string name="lbl_extra_document">Add More Document</string>
    <string name="title_gate_entry">Gate Entry</string>
    <string name="msg_select_material_type">"Select Material "</string>
    <string name="msg_enter_qty">Enter quantity</string>
    <string name="msg_select_unit">Select Unit</string>
    <string name="btn_submit">Submit</string>
    <string name="msg_invalid_field">Invalid Field</string>
    <string name="msg_enter_supplier_name">Enter Supplier Name</string>
    <string name="msg_enter_driver_name">Enter Driver Name</string>
    <string name="msg_enter_mobile_no">Enter Mobile Number</string>
    <string name="msg_enter_licence_no">Enter Licence Number</string>
    <string name="msg_enter_truck_no">Enter Truck Number</string>
    <string name="msg_enter_invoice_no">Enter Invoice Number</string>
    <string name="msg_enter_coa_no">Enter COA Number</string>
    <string name="btn_upload">Upload</string>
    <string name="msg_please_wait">Please wait…</string>
    <string name="msg_failed">Gate Entry Failed</string>
    <string name="permission_not_granted_msg">Permissions required to make app features work, exiting app</string>
    <string name="title_upload_doc">Upload Document</string>
    <string name="cancel">Cancel</string>
    <string name="take_photo">Capture Photo</string>
    <string name="choose_gallery">Choose from Library</string>
    <string name="error_message">Error occurred!</string>
    <string name="dialog_message">Message</string>
    <string name="message_need_permission">Need Permissions</string>
    <string name="message_grant_permission">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="label_setting">GOTO SETTINGS</string>
    <string name="file_upload_successful">File has been uploaded successfully</string>
    <string name="first_seleted_media">First select file for upload</string>
    <!--<string name="msg_upload_more_image">File has been uploaded successfully.\n\nWould you like to upload more files?</string>-->
    <string name="msg_upload_more_image">Data save successfully.\n\nWould you like to upload more files?</string>
    <string name="lbl_no_data">No data found</string>
    <string name="title_all_gate_entry">Gate Entry List</string>
    <string name="title_all_gate_entry_details">Gate Entry Details</string>
    <string name="mn_edit">Edit</string>
    <string name="lbl_inv_check">Invoice Check</string>
    <string name="lbl_coa_check">COA Check</string>
    <string name="lbl_material_check">Material Check</string>
    <string name="lbl_qty_check">Quantity Check</string>
    <string name="lbl_batch_no">Batch No*</string>
    <string name="ex_batch_no">Ex. 12596</string>
    <string name="lbl_note">Note</string>
    <string name="ex_note">Ex. Instruction</string>
    <string name="ex_location">Ex. Karve Nagar</string>
    <string name="lbl_location">Storage Location</string>
    <string name="ex_qty">Ex.167</string>
    <string name="msg_please_check_inv">Please Check Invoice</string>
    <string name="msg_please_check_coa">Please Check  COA</string>
    <string name="msg_please_check_material">Please check material</string>
    <string name="msg_please_check_qty">Please check quanty</string>
    <string name="msg_please_enter_batch_no">Please enter batch no.</string>
    <string name="lbl_add_location">Add location here</string>
    <string name="msg_please_enter_location">Please Enter Location</string>
    <string name="msg_please_enter_qty">Please Enter Quantity</string>
    <string name="msg_data_save_successfully">Data save successfully</string>
    <string name="msg_data_save_failed">Failed, Please try again</string>
    <string name="msg_data_update_successfully">Data update successfully</string>
    <string name="title_unloading_check">Material Unloading</string>
    <string name="msg_something_went_wrong">Something went wrong</string>
    <string name="default_notification_channel_id">TraceWizChannel</string>
    <string name="lbl_material_detail">Material Details</string>
    <string name="lbl_material_name">Material Name</string>
    <string name="lbl_supplier_details">Supplier Details</string>
    <string name="lbl_driver_details">Driver Details</string>
    <string name="btn_continue">Continue</string>
    <string name="msg_image_not_found">Image not found</string>
    <string name="title_gate_entry_edit">Gate Entry Edit</string>
    <string name="ex_coa">Ex.12345</string>
    <string name="msg_select_invoice_image">Please add Invoice image</string>
    <string name="msg_select_coa_image">Please add COA image</string>
    <string name="msg_exit_app">Are you sure you want to exit?</string>
    <string name="btn_delete">Delete</string>


    <string-array name="unit_array">
        <item>Kg</item>
        <item>Ltr</item>
    </string-array>
</resources>