<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    tools:context=".activitys.LoginActivity">
    <TextView
        android:id="@+id/txt_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/s_20"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/scr_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/m_30"
            android:elevation="@dimen/m_10"
            app:cardCornerRadius="@dimen/m_16"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/m_16"
                android:layout_margin="@dimen/m_10"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lbl_welcome"
                    android:textSize="@dimen/s_20"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/m_16"
                    android:gravity="center"
                    android:paddingBottom="@dimen/m_16"
                    android:text="@string/lbl_login"
                    android:textSize="@dimen/s_16"
                    android:textStyle="bold"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="@dimen/m_16"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/m_16"
                    android:layout_marginBottom="@dimen/m_16"
                    android:hint="@string/prompt_password"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/colorPrimaryDark"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:padding="@dimen/m_16" />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:id="@+id/txt_forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/m_10"
                    android:gravity="center"
                    android:padding="@dimen/m_16"
                    android:text="@string/lbl_forgot_password"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"/>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/round_corner_button"
                    android:padding="@dimen/m_10"
                    android:text="@string/action_sign_in"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
    <TextView
        android:id="@+id/txt_new_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/m_70"
        android:gravity="center"
        android:padding="@dimen/m_16"
        android:textStyle="bold"
        android:textColor="@color/white"/>
</RelativeLayout>